--- a/network/index.html
+++ b/network/index.html
@@ -70,7 +70,7 @@
   		<div class="z" rel="in"></div> <div class="z" rel="out"></div> <div class="z" rel="center"></div>
 	</div>
 	<div id="copyright">
-		<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="images/CC.png" /></a></div>
+		<a rel="license" href=""><img alt="Creative Commons License" style="border-width:0" src="images/CC.png" /></a></div>
 	</div>
 <div id="attributepane">
 <div class="text">
@@ -90,7 +90,7 @@
 	</div>
 </div>
 <div id="developercontainer">
-	<a href="http://www.oii.ox.ac.uk" title="Oxford Internet Institute"><div id="oii"><span>OII</span></div></a>
+	<a href="" title="Oxford Internet Institute"><div id="oii"><span>OII</span></div></a>
 	<a href="http://jisc.ac.uk" title="JISC"><div id="jisc"><span>JISC</span></div></a>	
 </div>
 <script type="text/javascript">
